cmake_minimum_required(VERSION 3.23)
project(beg_cplusplus17)

set(CMAKE_CXX_STANDARD 17)

add_executable(Ex6_07 Examples/Chapter06/Ex6_07.cpp)

add_executable(Ex14_01 Examples/Chapter14/Ex14_01/Ex14_01.cpp)
add_executable(Ex14_02 Examples/Chapter14/Ex14_02/Ex14_02.cpp)
add_executable(Ex14_03 Examples/Chapter14/Ex14_03/Ex14_03.cpp)
add_executable(Ex14_04 Examples/Chapter14/Ex14_04/Ex14_04.cpp)
add_executable(Ex14_05 Examples/Chapter14/Ex14_05/Ex14_05.cpp)
add_executable(Ex14_06 Examples/Chapter14/Ex14_06/Ex14_06.cpp)
add_executable(Ex14_07 Examples/Chapter14/Ex14_07/Ex14_07.cpp)
add_executable(Ex14_07A Examples/Chapter14/Ex14_07A/Ex14_07A.cpp)
add_executable(Ex14_08 Examples/Chapter14/Ex14_08/Ex14_08.cpp)
add_executable(Ex14_09 Examples/Chapter14/Ex14_09/Ex14_09.cpp)

add_executable(Ex17_01 Examples/Chapter17/Ex17_01/Ex17_01.cpp)
add_executable(Ex17_02 Examples/Chapter17/Ex17_02/Ex17_02.cpp)
add_executable(Ex17_03 Examples/Chapter17/Ex17_03/Ex17_03.cpp)
add_executable(Ex17_04 Examples/Chapter17/Ex17_04/Ex17_04.cpp)

add_executable(Ex14_10 Examples/Chapter14/Ex14_10/Ex14_10.cpp)